<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:label ="@string/logout"
    tools:context="com.example.helpbuy.SignUpActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/light_yellow_navi_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:scrollbarThumbHorizontal="@drawable/newapplogo"
        android:scrollbarThumbVertical="@drawable/newapplogo"
        android:scrollbarTrackVertical="@drawable/newapplogo">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Welcome to Help Buy!"
            android:textColor="@color/black"
            android:textSize="14pt" />

        <ImageView
            android:layout_width="186dp"
            android:layout_height="166dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:scrollbarThumbHorizontal="@drawable/newapplogo"
            android:scrollbarThumbVertical="@drawable/newapplogo"
            android:scrollbarTrackVertical="@drawable/newapplogo"
            android:src="@drawable/newapplogo"
            app:srcCompat="@drawable/newapplogo" />
            // tools:srcCompat="@drawable/newapplogo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/black"
            app:backgroundTint="#FFA000" />

        <!--        <Button-->
        <!--            android:id="@+id/btn_reset_password"-->
        <!--            android:layout_width="fill_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="20dip"-->
        <!--            android:background="@null"-->
        <!--            android:text="@string/btn_forgot_password"-->
        <!--            android:textAllCaps="false"-->
        <!--            android:textColor="@color/colorAccent" />-->

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:text="NEW USER? REGISTER NOW"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:backgroundTint="@color/light_yellow_navi_bg" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>